syntax = "proto3";

package vou.proto;

option go_package = "VOU-Server/proto/gen";

message Branch {
  int64 id = 1;
  int64 store_id = 2;
  string name = 3;
  string position = 4;
  string city_name = 5;
  string country = 6;
  string address = 7;
  string emoji = 8;
}